--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
+    "react-redux": "^4.4.6",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0"
   }
 }
