--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent-jsonp": "^0.1.1"
   }
 }
