--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-spa": "0.0.2",
     "gulp": "^3.9.1",
     "jsonp": "^0.2.1",
     "lodash": "^3.10.1",
